Adding labels to forms on login and register pages

--- a/templates/login.html
+++ b/templates/login.html
@@ -26,12 +26,16 @@
                       {% endif %}
                     {% endwith %}
 
+                    <h3>Email</h3>
+
                     <p>
                         <br/> {{ form.email() }}
                         {% for err in form.email.errors %}
                         <span style="color:red">{{ err }}</span>
                         {% endfor %}
                     </p><br/>
+
+                    <h3>Password</h3>
 
                     <p>
                         <br/> {{ form.password_hash() }}
