--- a/static/style.css
+++ b/static/style.css
@@ -86,6 +86,11 @@ nav a
     padding: 100px 0;
 }
 
+.container a
+{
+    color: white;
+}
+
 .post
 {
     width: 60%;
@@ -105,6 +110,11 @@ nav a
 {
     background: lightblue;
     padding: 50px 20px;
+}
+
+.post-body img
+{
+    width: 60%;
 }
 
 .post-info, .comment-info
